WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153826
[GStreamer] Performance problems with bigger video resolution in the webrtc media player
https://bugs.webkit.org/show_bug.cgi?id=153826
Summary
[GStreamer] Performance problems with bigger video resolution in the webrtc m...
Alejandro G. Castro
Reported
2016-02-03 02:13:52 PST
We have a performance issue when the video resolution is bigger, there is a FIXME in the implementation file about this: MediaPlayerPrivateGstreamerOwr.cpp (InternalLoad): ... // FIXME: Remove hardcoded video dimensions when the rendering performance ... g_object_set(m_videoRenderer.get(), "width", 640, "height", 480, nullptr); ...
Attachments
patch
(3.92 KB, patch)
2016-08-11 02:19 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
patch
(3.12 KB, patch)
2016-08-11 02:22 PDT
,
Philippe Normand
alex
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2016-08-11 02:19:15 PDT
Created
attachment 285822
[details]
patch
WebKit Commit Bot
Comment 2
2016-08-11 02:20:20 PDT
Attachment 285822
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:84: "virtual" is redundant since function is already declared as "override" [readability/inheritance] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philippe Normand
Comment 3
2016-08-11 02:22:39 PDT
Created
attachment 285823
[details]
patch
Alejandro G. Castro
Comment 4
2016-08-11 02:32:21 PDT
Comment on
attachment 285823
[details]
patch LGTM
Philippe Normand
Comment 5
2016-08-12 03:40:20 PDT
Committed
r204410
: <
http://trac.webkit.org/changeset/204410
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug