[GStreamer] Performance problems with bigger video resolution in the webrtc media player https://bugs.webkit.org/show_bug.cgi?id=153826

Reviewed by Alejandro G. Castro.

Keep the OpenWebRTC video renderer size synchronized with the Media element size.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.cpp:
(WebCore::MediaPlayerPrivateGStreamerOwr::setSize):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerOwr.h:

Canonical link: https://commits.webkit.org/178917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204410 268f45cc-cd09-0410-ab3c-d52691b4dbfc